infrastructure/cilium-secrets/cilium-istio-route.yml
# gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-istio
  namespace: istio-system
  annotations:
    # Request a specific IP from the pool
    io.cilium/lb-ipam-ips: "10.10.30.253"
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same  # Only allow routes from the 'istio-system' namespace

---
# route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-to-istio-ingress
  namespace: istio-system
spec:
  parentRefs:
  - name: cilium-gateway-istio
  rules:
  - backendRefs:
    - name: istio-ingressgateway
      port: 80
  selector:
    # Cilium Gateway Envoy pods label
    io.cilium.gateway/name: cilium-gateway-istio
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-envoy-to-istio
  namespace: istio-system
spec:
  endpointSelector:
    matchLabels:
      app: istio-ingressgateway
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:app": "cilium-envoy" # Matches your cilium-envoy DaemonSet
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
